Move to Java 6, later versions of libraries. Yet more small tweaks to code based on analysis, including making sure to use UTF-8 encoding everywhere rather than platform default. Standardized on MersenneTwisterRNG. Used Class.asSubclass() to avoid casts.
git-svn-id: https://svn.apache.org/repos/asf/lucene/mahout/trunk@690720 13f79535-47bb-0310-9956-ffa450edef68